# pcsc-lite

./: BUGS.txt  README.build  config.h.in  configure.ac  index.html  params.json  project.config  scalability_security_enhancements.odg
Drivers/slbEGate/: AdmHndlr.c  AdmHndlr.h  ifdhandler.c
PCSC/: Makefile.in  aclocal.m4  configure  configure.in
PCSC/doc/: Makefile.in
PCSC/doc/example/: Makefile.in
PCSC/etc/: Makefile.in
PCSC/libmusclecard/src/: musclecard.c
PCSC/src/: Makefile.in  configfile.c  pcsc-wirecheck-dist.c  tokenparser.c
PCSC/src/PCSC/: pcsclite.h.in
PCSC/src/spy/: Makefile.in
buildenv/: Makefile  env  setup
buildenv/pkgbld/: Makefile  depend  pkginfo  postinstall  preinstall  preremove  prototype
buildenv/pkgbld/pkgconfig/: libusb.pc
buildenv/solaris/: Makefile  pcscd-Local  pcscd-Local.conf  pcscd-svc  pcscd.conf  pcscd.xml
rel-1_1_2beta3/PCSC/src/: Makefile.in
src/: Makefile.am  auth.c  auth.h  cfgfuncs.c  configfile.c  configfile.l  daemon_utils.c  daemon_utils.h  debug.c  debug.h  debuglog.c  dyn_unix.c  error.c  eventhandler.c  eventhandler.h  hotplug_libusb.c  hotplug_linux.c  hotplug_macosx.c  ifdwrapper.c  instance.c  instance.h  launcher.c  launcher.h  pcsc_config.h  pcscdaemon.c  pcscdaemon.h  powermgt_macosx.c  profile.h  prothandler.c  readerfactory.c  readerfactory.h  sys_generic.h  sys_unix.c  thread_generic.h  thread_unix.c  util.h  validate.c  validate.h  winscard.c  winscard_client.h  (+7 more)
src/PCSC/: clientcred.h  ifd-auth.h  ifdhandler.h  pcscd-auth.h  pcscd-validate.h  pcsclite.h.in  reader.h.in
src/modules/: Makefile.am  Makefile.in  ifdAuth_generic.c  pcscdAuth_generic.c  pcscd_validate.conf  validate_generic.c
